--- a/public/main.css
+++ b/public/main.css
@@ -2,15 +2,37 @@
     font-family: 'Public Sans', sans-serif;
 }
 
-body {
-    margin: 0 auto;
+.header {
+    color: white;
+    background-color: blueviolet;
+    padding: 10px 10px 10px 10px;
+    width: 100%;
+    margin-top: 0;
+    margin-left: 0;
 }
 
-div {
-    margin: 0 auto;
+.container {
+    width: 50%;
+    margin: 0 auto; 
+}
+
+input {
+    padding-bottom: 10px;
+}
+
+#foreignCurr {
+    width: 300px;
+    margin-top: 10px;
+    border: 1px solid grey;
+    border-radius: 5px;
 }
 
 button {
+    color: white;
+    margin: 10px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
     background-color: blueviolet;
-    border: 2px solid rgba(71, 8, 131, 0.2)
+    border: none;
+    border-radius: 17px;
 }
+
